# QR

./: CMakeLists.txt  README  main.cpp
ZxLib/: ZxAPI.cpp  ZxAPI.h  ZxCV.cpp  ZxCV.h  ZxConst.h  ZxImageTool.cpp  ZxImageTool.h
